[package]
name = "borrow"
version = "2.0.0"
authors = ["Wojciech Danilo <wojciech.danilo@gmail.com>"]
description = "Zero-overhead, safe implementation of partial borrows. This crate allows you to borrow selected fields from a struct and split structs into non-overlapping sets of borrowed fields."
edition = "2021"
keywords = ["struct", "borrow", "partial", "fields", "references"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/wdanilo/borrow"

[lib]

[dependencies]
borrow-macro = { version = "2.0.0", path = "../macro" }
tstr = { version = "0.3" }
web-sys = { version = "0.3", optional = true, features = ["console"] }

[lints]
workspace = true

[features]
wasm = ["web-sys"]
usage_tracking = []
no_usage_tracking = []
